add hostname in template

--- a/install-scripts/provisioning/inventory.tmpl
+++ b/install-scripts/provisioning/inventory.tmpl
@@ -8,8 +8,8 @@ ${name} ansible-host=${ip}
 %{ endfor ~}
 
 [edge]
-%{ for ip in worker ~}
-${ip}
+%{ for name, ip in worker ~}
+${name} ansible-host=${ip}
 %{ endfor ~}
 
 [cloud:vars]
