--- a/install-scripts/provisioning/inventory.tmpl
+++ b/install-scripts/provisioning/inventory.tmpl
@@ -1,6 +1,7 @@
 [all:vars]
 ansible_connection=ssh
 ansible_user=deploy_git
+ansible_ssh_private_key_file=~/.ssh/id_rsa
 
 [cloud]
 %{ for name, ip in master ~}
