template kubernetes manifests

--- a/benchmarking/kubernetes/sensor-device-depl.yml.j2
+++ b/benchmarking/kubernetes/sensor-device-depl.yml.j2
@@ -47,4 +47,4 @@ data:
   WORKER_PORT: "80"
   WORKER_IP: "http://sensor-ew1-service"
   WORKER_ENDPOINT: "sensorData"
-  PING_INTERVAL: "{{ counter }}" #in ms
+  PING_INTERVAL: "{{ SENSOR_DEVICE_PING_INTERVAL }}" #in ms
