--- a/benchmarking/kubernetes/image-processing-cloud-deployment.yaml.j2
+++ b/benchmarking/kubernetes/image-processing-cloud-deployment.yaml.j2
@@ -32,7 +32,7 @@ spec:
               - key: node
                 operator: In
                 values:
-                - cloud1
+                - cloud
       containers:
         - env:
             - name: IMAGE_CLOUD_PORT
